<resources>
    <string name="app_name">Контроль выкладки</string>

    <string name="action_settings">Settings</string>
    <string name="with_count_facings">С подсчетом фейсингов</string>
    <string name="without_count_facings">Без подсчета фейсингов</string>
    <string name="with_control_places">С контролем пустых мест</string>
    <string name="without_control_places">Без контроля пустых мест</string>
    <string name="self_control_tc">Самоконтроль ТК</string>
    <string name="external_audit">Внешний аудит</string>
    <string name="incorrect_code_message">Введен некорректный пин-код!</string>
    <string name="number_of_facings">Количество фейсингов</string>
    <string name="without_number_of_facings">Без количества фейсингов</string>
    <string name="enter_quantity">Введите кол-во</string>
    <string name="total_facings">Итого фейсингов</string>
    <string name="goods_barcode">Штрихкод товара</string>
    <string name="good_on_shelf">Товар на полке</string>
    <string name="good_is_missing">Товар отсутствует</string>
    <string name="segment_number_store">%1$s (ТК - %2$s)</string>
    <string name="one_space_two">%1$s %2$s</string>


    <!-- Информационные сообщения -->
    <string name="code_screen_message">Введите ПИН-код для подтверждения входа в режим \"%1$s\"</string>
    <string name="segment_processing_mode">Определение режима\nобработки сегмента</string>

    <string name="shelf_data_will_not_be_saved">СЕГМЕНТ № %1$s\nПОЛКА № %2$s\n\nДанные полки не будут сохранены</string>
    <string name="save_shelf_scan_results">СЕГМЕНТ: %1$s\nПОЛКА: %2$s\n\nСохранить результаты сканирования полки и закрыть ее для редактирования?</string>
    <string name="save_segment_scan_results">СЕГМЕНТ: %1$s\n\nСохранить результаты сканирования сегмента, закрыть его для редактирования и переслать?</string>
    <string name="is_empty_place_decorated_correctly">%1$s %2$s\n\nСЕГМЕНТ № %3$s\nПОЛКА № %4$s\n\nПустое место оформлено правильно?</string>
    <string name="segment_started_with_facings">Начата обработка сегмента\n№%1$s с подсчетом количества фейсингов</string>
    <string name="segment_started_without_facings">Начата обработка сегмента\n№%1$s без подсчета количества фейсингов</string>
    <string name="shelf_started">СЕГМЕНТ: %1$s\nНачата обработка полки №%2$s</string>
    <string name="delete_data_on_segment">ТК № %1$s\nСЕГМЕНТ № %2$s\n\nУдалить данные по сегменту?</string>
    <string name="no_shelves_in_segment_to_save">СЕГМЕНТ № %1$s\n\nВ сегменте отсутствуют полки для сохранения. Сегмент не будет сохранен</string>
    <string name="incomplete_segment_detected">Обнаружен незавершенный сегмент. Начало работы с новым сегментом невозможно. Перейти к обработке сегмента?</string>
    <string name="unsaved_self_control_data_detected">На устройстве обнаружены несохраненные данные в режиме \"Самоконтроль ТК\".\n\nПереход к внешнему аудиту будет недоступен.</string>
    <string name="unsaved_external_audit_data_detected">На устройстве обнаружены несохраненные данные в режиме \"Внешний аудит\".\n\nПереход к самоконтролю ТК будет недоступен.</string>
    <string name="twelve_characters_entered">Введено 12 знаков. Какой код вы ввели?</string>
    <string name="unknown_good_barcode">ШК %1$s\n\nНеизвестный штрихкод. Товар определить не удалось. Все равно использовать этот штрихкод?</string>
    <string name="shelf_is_deleted">Полка удалена. Открыть просмотр или создать новую?</string>
    <string name="delete_shelf_data">Удалить данные полки №%1$s?</string>
    <string name="segment_is_deleted">Сегмент удален. Открыть просмотр или создать новый?</string>
    <string name="successfully_saved_to_lua">Успешно сохранено в LAU</string>
    <string name="error_saving_to_lua">Ошибка сохранения в LAU</string>
    <string name="lua_system_unavailable">Система LAU недоступна. Пересылка результатов невозможна. Продолжить работу с ТДС?</string>
    <string name="do_you_really_want_to_leave">Вы действительно хотите выйти?</string>
    <string name="unsent_data_detected">На ТДС обнаружены неотправленные данные. Хотите перейти к отправке этих данных?</string>
    <string name="good_not_found_in_database">Данный товар не найден в справочнике</string>


    <!-- Заголовки экранов -->
    <string name="title_store_number">TK - %1$s</string>
    <string name="title_segment_number">Сегмент: %1$s</string>
    <string name="title_segment_shelf_number">Сегмент: %1$s/Полка: %2$s</string>
    <string name="title_good_sap_name">%1$s %2$s</string>


    <!-- Подзаголовки экранов -->
    <string name="description_main_menu">Главное меню</string>
    <string name="description_select_mode">Выбор режима</string>
    <string name="description_auxiliary_menu">Вспомогательное меню</string>
    <string name="description_list_of_processed_segments">Список обработанных сегментов</string>
    <string name="description_list_of_processed_selves">Список обработанных полок</string>
    <string name="description_list_of_processed_goods">Список обработанных товаров</string>
    <string name="description_info_about_good">Информация о товаре</string>
    <string name="unfinished_data">Незавершённые данные</string>


    <!-- Заголовки списков -->
    <string name="column_title_item_number">№</string>
    <string name="column_title_segment_number_date">№ Сегмента/Дата</string>
    <string name="column_title_number_shelf_time">№ Полки/Время начала</string>
    <string name="column_title_shelves">Полок</string>
    <string name="column_title_status">Статус</string>
    <string name="column_title_good">Товар</string>
    <string name="column_title_goods">Товаров</string>
    <string name="column_title_sign">Признак</string>
    <string name="column_title_facing">Фейсинг</string>


    <!-- Подсказки в полях -->
    <string name="enter_segment_number">Введите номер сегмента</string>
    <string name="enter_shelf_number">Введите номер полки</string>

</resources>
