<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.good_info_facing.GoodInfoFacingFragment">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp7.features.good_info.GoodInfoViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/LinearRowStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/without_number_of_facings"/>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"/>

            <LinearLayout
                style="@style/LinearRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/total_facings"/>

                </LinearLayout>

                <View
                    style="@style/VerticalDivider"/>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tw_facing_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{vm.good.facingOrPlus}"
                        android:textSize="14sp"
                        tools:text="+"/>

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"/>

            <LinearLayout
                style="@style/LinearRowStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{!vm.missingGood ? @string/good_on_shelf : @string/good_is_missing }"
                    tools:text="@string/good_on_shelf"/>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"/>

            <LinearLayout
                style="@style/LinearRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/goods_barcode"/>

                </LinearLayout>

                <View
                    style="@style/VerticalDivider"/>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tw_barcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{vm.good.eanOrEmpty}"
                        android:textSize="14sp"
                        tools:text="12345678912"/>

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:src="@drawable/ic_scan_barcode_48dp"
            app:focusable="@{false}"
            tools:ignore="ContentDescription"/>

    </FrameLayout>

</layout>